--- a/css/about.css
+++ b/css/about.css
@@ -8,9 +8,8 @@
 
 body {
     font-family: 'Space Grotesk', system-ui, sans-serif;
-    background: #000;
+    background-color: #000;
     color: #fff;
-    overflow-x: hidden;
 }
 
 .page-header {
